--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -328,7 +328,7 @@
 <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe"></iframe>
 <div id="overlay"></div>
 
-<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909" xr-mode-ui="enabled: false"
+<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909" vr-mode-ui="enabled: false" ar-mode-ui="enabled: false" xr-mode-ui="enabled: false"
          device-orientation-permission-ui="
  denyButtonText: Отказаться;
  allowButtonText: Разрешить;
